// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className="button "
  >
    <span>
      Hello world
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className="button button--disabled"
    onClick={[Function]}
  >
    <span>
      I'm a disabled button
    </span>
  </button>
</div>
`;

exports[`Storyshots FavouriteNumber Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <label
      htmlFor="favorite-number"
    >
      Favorite Number
    </label>
    <input
      id="favorite-number"
      onChange={[Function]}
      type="number"
      value={0}
    />
  </div>
</div>
`;

exports[`Storyshots InboxScreen default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      Inbox Screen
    </h1>
    <div
      className="page lists-show"
    >
      <nav>
        <h1
          className="title-page"
        >
          <span
            className="title-wrapper"
          >
            Taskbox
          </span>
        </h1>
      </nav>
      <div
        className="list-items"
      >
        <div
          className="list-item TASK_PINNED"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 8 (pinned)"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
        <div
          className="list-item TASK_INBOX"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 1"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
        <div
          className="list-item TASK_INBOX"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 2"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
        <div
          className="list-item TASK_INBOX"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 3"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
        <div
          className="list-item TASK_INBOX"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 4"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
        <div
          className="list-item TASK_INBOX"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 5"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
        <div
          className="list-item TASK_INBOX"
        >
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              disabled={true}
              name="checked"
              type="checkbox"
            />
            <span
              className="checkbox-custom"
              onClick={[Function]}
            />
          </label>
          <div
            className="title"
          >
            <input
              placeholder="Input title"
              readOnly={true}
              style={
                Object {
                  "textOverflow": "ellipsis",
                }
              }
              type="text"
              value="Task 6"
            />
          </div>
          <div
            className="actions"
            onClick={[Function]}
          >
            <button
              onClick={[Function]}
            >
              <span
                className="icon-star"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InboxScreen error 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <h1
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      Inbox Screen
    </h1>
    <div
      className="page lists-show"
    >
      <div
        className="wrapper-message"
      >
        <span
          className="icon-face-sad"
        />
        <div
          className="title-message"
        >
          Oh no!
        </div>
        <div
          className="subtitle-message"
        >
          Something went wrong
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MUIButton Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained PureMUIButton-success-2 MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Hello 
      Ima btn
    </span>
  </button>
</div>
`;

exports[`Storyshots MUIButton With Title 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained PureMUIButton-success-35 MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Hello 
      Mui Button
    </span>
  </button>
</div>
`;

exports[`Storyshots MUIButton With Title and Type as error 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained PureMUIButton-error-67 MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Hello 
      Mui Error Button
    </span>
  </button>
</div>
`;

exports[`Storyshots MUIButton With Title and Type as success 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained PureMUIButton-success-101 MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Hello 
      Mui Success Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-item TASK_ARCHIVED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={true}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        style={
          Object {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="Test Task"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        style={
          Object {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="Test Task"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <button
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Long title 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-item TASK_INBOX"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        style={
          Object {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="This task's name is absurdly large. In fact, I think if I keep going I might end up with content overflow. What will happen? The star that represents a pinned task could have text overlapping. The text could cut-off abruptly when it reaches the star. I hope not"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <button
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-item TASK_PINNED"
  >
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
    <div
      className="title"
    >
      <input
        placeholder="Input title"
        readOnly={true}
        style={
          Object {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="Test Task"
      />
    </div>
    <div
      className="actions"
      onClick={[Function]}
    >
      <button
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList pinnedTasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <button
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
